--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,7 +17,7 @@
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
        https://firebase.google.com/docs/web/setup#available-libraries -->
-
+  <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
 
 </body>
 </html>
